--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body class="appBackground">
     <div class="container">
         <!--Navbar Top-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -230,7 +230,93 @@
 
                         </nav>
                     </div>
-
+                    w
+                    <!--Hot Products-->
+                    <div class="recommended_items">
+                        <div class="line-behind-title-text">
+                            <h2 class="background"><span>Hot Products</span></h2>
+                        </div>
+                        <div id="recommended-item-carouse" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <div class="card bg-info">
+                                                <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                                <div class="card-body text-center">
+                                                    <h5 class="card-title">Boreal Griffin</h5>
+                                                    <p class="card-text">$22.00</p>
+                                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="card bg-info">
+                                                <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                                <div class="card-body text-center">
+                                                    <h5 class="card-title">Boreal Griffin</h5>
+                                                    <p class="card-text">$22.00</p>
+                                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="card bg-info">
+                                                <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                                <div class="card-body text-center">
+                                                    <h5 class="card-title">Boreal Griffin</h5>
+                                                    <p class="card-text">$22.00</p>
+                                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <div class="card bg-dark">
+                                                <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                                <div class="card-body text-center">
+                                                    <h5 class="card-title">Boreal Griffin</h5>
+                                                    <p class="card-text">$22.00</p>
+                                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="card bg-dark">
+                                                <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                                <div class="card-body text-center">
+                                                    <h5 class="card-title">Boreal Griffin</h5>
+                                                    <p class="card-text">$22.00</p>
+                                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="card bg-dark">
+                                                <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                                <div class="card-body text-center">
+                                                    <h5 class="card-title">Boreal Griffin</h5>
+                                                    <p class="card-text">$22.00</p>
+                                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#recommended-item-carouse" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#recommended-item-carouse" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <!--Right side Commercial wall-->
@@ -238,62 +324,73 @@
                     <div class="container bg-deep-grey">
                         <div class="row mt-3">
                             <div class="col-12 col-md-6 col-lg-12 mt-2">
-                                <a href="https://shopee.tw/" target="_blank">
-                                    <img src="assets/img/commercial_1.png" alt="" class="img-fluid">
-                                </a>
+                                <div class="product-image-wrapper">
+                                    <a href="https://shopee.tw/" target="_blank">
+                                        <img src="assets/img/commercial_1.png" alt="" class="img-fluid">
+                                    </a>
+                                </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-12 mt-2">
-                                <a href="https://tw.msi.com/" target="_blank">
-                                    <img src="assets/img/commercial_2.png" alt="" class="img-fluid">
-                                </a>
+                            <div class="col-12 col-md-6 col-lg-12 ">
+                                <div class="product-image-wrapper">
+                                    <a href="https://tw.msi.com/" target="_blank">
+                                        <img src="assets/img/commercial_2.png" alt="" class="img-fluid">
+                                    </a>
+                                </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-12 mt-2">
-                                <a href="https://www.ruten.com.tw/" target="_blank">
-                                    <img src="assets/img/commercial_3.png" alt="" class="img-fluid">
-                                </a>
+                            <div class="col-12 col-md-6 col-lg-12 ">
+                                <div class="product-image-wrapper">
+                                    <a href="https://magic.wizards.com/en/articles" target="_blank">
+                                        <img src="assets/img/commercial_3.png" alt="" class="img-fluid">
+                                    </a>
+                                </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-12 mt-2">
-                                <a href="https://www.twitch.tv/" target="_blank">
-                                    <img src="assets/img/commercial_4.png" alt="" class="img-fluid">
-                                </a>
+                            <div class="col-12 col-md-6 col-lg-12 ">
+                                <div class="product-image-wrapper">
+                                    <a href="https://www.twitch.tv/" target="_blank">
+                                        <img src="assets/img/commercial_4.png" alt="" class="img-fluid">
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+
         </div>
+    </div>
 
 
 
-        <div class="row mt-sm-4 mt-md-0">
-            <div class="col-sm-12 col-md-8 text-center text-md-left">
-                <h3>Spacing utilities that apply to all breakpoints</h3>
-                <p class="lead">This is because those classes are applied from min-width: 0 and up, and thus are not
-                    bound by a media query. </p>
-                <p>Additionally, Bootstrap also includes an .mx-auto class for horizontally centering fixed-width block
-                    level content—that is, content that has display: block and a width set—by setting the horizontal
-                    margins to auto.</p>
-                <p> Includes support for individual properties, all properties, and vertical and horizontal properties.
-                    Classes are built from a default Sass map ranging from .25rem to 3rem.</p>
-            </div>
-            <div class="col-sm-12 col-md-4">
-                <h3 class="mb-4">Secondary Menu</h3>
-                <ul class="nav flex-column nav-pills">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Jersey</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Shoesss</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Others</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
-                </ul>
-            </div>
+    <div class="row mt-sm-4 mt-md-0">
+        <div class="col-sm-12 col-md-8 text-center text-md-left">
+            <h3>Spacing utilities that apply to all breakpoints</h3>
+            <p class="lead">This is because those classes are applied from min-width: 0 and up, and thus are not
+                bound by a media query. </p>
+            <p>Additionally, Bootstrap also includes an .mx-auto class for horizontally centering fixed-width block
+                level content—that is, content that has display: block and a width set—by setting the horizontal
+                margins to auto.</p>
+            <p> Includes support for individual properties, all properties, and vertical and horizontal properties.
+                Classes are built from a default Sass map ranging from .25rem to 3rem.</p>
         </div>
+        <div class="col-sm-12 col-md-4">
+            <h3 class="mb-4">Secondary Menu</h3>
+            <ul class="nav flex-column nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Jersey</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Shoesss</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Others</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+            </ul>
+        </div>
+    </div>
     </div>
 
 
