--- a/src/tmp.html
+++ b/src/tmp.html
@@ -14,7 +14,9 @@
 
 </head>
 
-<body>
+<!-- <body class="appBackground"> -->
+
+<body class="">
     <div class="container">
         <!--Navbar Top-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -79,51 +81,59 @@
         <!--Content-->
         <div class="container">
             <div class="row">
-                <!--left sidebar-->
+                <!--Left side Menu-->
                 <div class="col-lg-3">
                     <div class="line-behind-title-text">
                         <h2 class="background"><span>Category</span></h2>
-                        <div id="accordion">
+                        <div class="accordion" id="accordionExample">
                             <div class="card">
-                                <div class="card-header">
+                                <div class="card-header" id="headingOne">
                                     <a class="card-link" data-toggle="collapse" href="#collapseOne">
                                         Collapsible Group Item #1
                                     </a>
                                 </div>
-                                <div id="collapseOne" class="collapse" data-parent="#accordion">
-                                    <ul>
-                                        <li><a href="#">Reports</a></li>
-                                        <li><a href="#">Search</a></li>
-                                        <li><a href="#">Graphs</a></li>
-                                        <li><a href="#">Settings</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header">
-                                    <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
-                                        Collapsible Group Item #2
-                                    </a>
-                                </div>
-                                <div id="collapseTwo" class="collapse" data-parent="#accordion">
-                                    <div class="card-body">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                    <div>
+                                        <ul class="none-bullet">
+                                            <li><a class="under-line" href="#">Reports</a></li>
+                                            <li><a href="#">Search</a></li>
+                                            <li><a href="#">Graphs</a></li>
+                                            <li><a href="#">Settings</a></li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
                             <div class="card">
-                                <div class="card-header">
-                                    <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+                                <div class="card-header" id="headingTwo">
+                                    <a class="card-link" data-toggle="collapse" href="#collapseTwo">
+                                        Collapsible Group Item #2
+                                    </a>
+                                </div>
+                                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                                    <div>
+                                        <ul class="none-bullet">
+                                            <li><a class="" href="#">Reports</a></li>
+                                            <li><a href="#">Search</a></li>
+                                            <li><a href="#">Graphs</a></li>
+                                            <li><a href="#">Settings</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header" id="headingThree">
+                                    <a class="card-link" data-toggle="collapse" href="#collapseThree">
                                         Collapsible Group Item #3
                                     </a>
                                 </div>
-                                <div id="collapseThree" class="collapse" data-parent="#accordion">
-                                    <div class="card-body">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                    <div>
+                                        <ul class="none-bullet">
+                                            <li><a class="" href="#">Reports</a></li>
+                                            <li><a href="#">Search</a></li>
+                                            <li><a href="#">Graphs</a></li>
+                                            <li><a href="#">Settings</a></li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -131,7 +141,7 @@
                     </div>
                 </div>
                 <!--Center Products-->
-                <div class="col-lg-9">
+                <div class="col-lg-7">
                     <div class="line-behind-title-text">
                         <h2 class="background"><span>Products</span></h2>
                         <div class="row  mb-4">
@@ -206,7 +216,7 @@
                                         <span class="sr-only">Previous</span>
                                     </a>
                                 </li>
-                                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item active"><a class="page-link" href="#">1</a></li>
                                 <li class="page-item"><a class="page-link" href="#">2</a></li>
                                 <li class="page-item"><a class="page-link" href="#">3</a></li>
                                 <li class="page-item"><a class="page-link" href="#">4</a></li>
@@ -223,9 +233,129 @@
                         </nav>
                     </div>
 
+                    <!--Hot Products-->
+                    <div>
+                        <div id="hotProducts-item-carousel" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <div class="card">
+                                                <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                                <div class="card-body text-center">
+                                                    <h5 class="card-title">Boreal Griffin</h5>
+                                                    <p class="card-text">$22.00</p>
+                                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="card">
+                                                <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                                <div class="card-body text-center">
+                                                    <h5 class="card-title">Boreal Griffin</h5>
+                                                    <p class="card-text">$22.00</p>
+                                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="card">
+                                                <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                                <div class="card-body text-center">
+                                                    <h5 class="card-title">Boreal Griffin</h5>
+                                                    <p class="card-text">$22.00</p>
+                                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <div class="card">
+                                                <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                                <div class="card-body text-center">
+                                                    <h5 class="card-title">Boreal Griffin</h5>
+                                                    <p class="card-text">$22.00</p>
+                                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="card">
+                                                <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                                <div class="card-body text-center">
+                                                    <h5 class="card-title">Boreal Griffin</h5>
+                                                    <p class="card-text">$22.00</p>
+                                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="card">
+                                                <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
+                                                <div class="card-body text-center">
+                                                    <h5 class="card-title">Boreal Griffin</h5>
+                                                    <p class="card-text">$22.00</p>
+                                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#hotProducts-item-carousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#hotProducts-item-carousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+                <!--Right side Commercial wall-->
+                <div class="col-lg-2">
+                    <div class="container bg-deep-grey">
+                        <div class="row mt-3">
+                            <div class="col-12 col-md-6 col-lg-12 mt-2">
+                                <div class="product-image-wrapper">
+                                    <a href="https://shopee.tw/" target="_blank">
+                                        <img src="assets/img/commercial_1.png" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-12 ">
+                                <div class="product-image-wrapper">
+                                    <a href="https://tw.msi.com/" target="_blank">
+                                        <img src="assets/img/commercial_2.png" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-12 ">
+                                <div class="product-image-wrapper">
+                                    <a href="https://magic.wizards.com/en/articles" target="_blank">
+                                        <img src="assets/img/commercial_3.png" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-12 ">
+                                <div class="product-image-wrapper">
+                                    <a href="https://www.twitch.tv/" target="_blank">
+                                        <img src="assets/img/commercial_4.png" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
-                <!--Commercial-->
+
+
+
             </div>
         </div>
 
